@@ -64,6 +64,9 @@ Grid *gridOptimizeXYZ(Grid *g, int node, double *dxdydz );
 Grid *gridSmartLaplacian(Grid *g, int node );
 Grid *gridSmartVolumeLaplacian(Grid *g, int node );
 
+Grid *gridStoreVolumeCostDerivatives(Grid *g, int node );
+Grid *gridStoreFaceCostParameterDerivatives(Grid *g, int node );
+
 Grid *gridSmoothNodeQP(Grid *g, int node );
 
 Grid *gridSmoothNodeVolume(Grid *g, int node );
